agregado for a template

--- a/django_ejer/plantillas/templates/dinamico.html
+++ b/django_ejer/plantillas/templates/dinamico.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1> Hola {{name}}</h1>
+    <h3>Categorias</h3>
+    
+    <ul>
+        {% for category in categories %}
+        <li> {{category}}</li>
+        {% endfor %}
+
+    </ul>
 </body>
 </html>
