--- a/django_ejer/estaticos/templates/estaticos.html
+++ b/django_ejer/estaticos/templates/estaticos.html
@@ -1,20 +1,15 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>Document</title>
 </head>
 <body>
-    <h1> Hola {{name}}</h1>
-    <h3>Categorias</h3>
-    
-    <ul>
-        {% for category in categories %}
-        <li> {{category}}</li>
-        {% endfor %}
-        <h5> Total de categorias: {{categories|length}}</h5>
-    </ul>
+    <h1>Estaticos</h1>
 </body>
 </html>
