--- a/django_ejer/herencia/templates/index.html
+++ b/django_ejer/herencia/templates/index.html
@@ -1,5 +1,12 @@
 {% extends './layout/base.html' %}
 
+
+{% block title %}
+Home
+{% endblock %}
+
+
 {% block content %}
 <h1>Home</h1>
 {% endblock %}
+
